<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="icarte.armedialab.com.icarte.ui.ConfigurationActivity">

        <com.ctrlplusz.anytextview.AnyTextView
            android:id="@+id/txtLabelStaffName"
            app:typeface="NoticiaText-BoldItalic.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/primary_text"
            android:layout_gravity="center_vertical"
            android:text="@string/name"
            android:layout_alignStart="@+id/layoutEditTableReference" />

        <com.ctrlplusz.anytextview.AnyTextView
            android:id="@+id/txtStaffName"
            app:typeface="NoticiaText-BoldItalic.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/primary_text"
            android:layout_gravity="center_vertical"
            android:layout_alignTop="@+id/txtLabelStaffName"
            android:layout_toEndOf="@+id/txtLabelStaffName"
            android:layout_marginStart="@dimen/activity_horizontal_margin_half" />

    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/txtLabelStaffCode"
        app:typeface="NoticiaText-BoldItalic.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/primary_text"
        android:layout_gravity="center_vertical"
        android:text="@string/staffCode"
        android:layout_below="@+id/txtLabelStaffName"
        android:layout_alignStart="@+id/layoutEditTableReference" />

    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/txtStaffCode"
        app:typeface="NoticiaText-BoldItalic.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/primary_text"
        android:layout_gravity="center_vertical"
        android:layout_alignTop="@+id/txtLabelStaffCode"
        android:layout_toEndOf="@+id/txtLabelStaffCode"
        android:layout_marginStart="@dimen/activity_horizontal_margin_half" />

    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/txtConfigurationSettings"
        app:typeface="NoticiaText-BoldItalic.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/primary_text"
        android:text="@string/title_activity_configuration"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txtStaffCode"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutEditTableReference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="start"
        android:layout_below="@+id/txtConfigurationSettings"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/editTableReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:inputType="number"
            android:hint="@string/title_table_ref_number" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutEditTableReference"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin_double_double"
        android:id="@+id/linearLayout">
        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/btn_add_to_order_selector"
            android:contentDescription="@string/title_save"
            android:paddingStart="@dimen/item_padding_top_bottom"
            android:paddingEnd="@dimen/item_padding_top_bottom"
            android:paddingTop="@dimen/item_padding_left_right"
            android:paddingBottom="@dimen/item_padding_left_right"
            android:text="@string/title_save"
            android:textSize="12sp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_half"
             />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/btn_add_to_order_selector"
            android:contentDescription="@string/cancel_item_config_dialog_title"
            android:paddingStart="@dimen/item_padding_top_bottom"
            android:paddingEnd="@dimen/item_padding_top_bottom"
            android:paddingTop="@dimen/item_padding_left_right"
            android:paddingBottom="@dimen/item_padding_left_right"
            android:text="@string/cancel_item_config_dialog_title"
            android:textSize="12sp"
             />
    </LinearLayout>
</RelativeLayout>
