<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:circleprogress="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="icarte.armedialab.com.icarte.ui.DeviceRegistrationProgressBarActivity"
    android:background="@drawable/bg_register_form"
    android:id="@+id/regMainContainer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/regProgressContainer"
        android:layout_centerHorizontal="true">

        <me.fichardu.circleprogress.CircleProgress
            android:id="@+id/progress"
            android:layout_width="205dp"
            android:layout_height="205dp"
            circleprogress:color1="@android:color/holo_red_light"
            circleprogress:color2="@android:color/holo_green_light"
            circleprogress:color3="@android:color/holo_blue_light"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/regContentContainer"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtInstanceId"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/instance_id"
            android:textColor="@color/solid_black"
            android:textIsSelectable="true"
            />

        <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtRestaurantCode"
        android:hint="@string/str_restaurant_code"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
            android:textColor="@color/solid_black"/>

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtActivationCode"
        android:hint="@string/str_activation_code"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/solid_black"
        android:textAlignment="center"/>

        <EditText
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtDeviceRegCode"
            android:hint="@string/str_device_reg_code"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/solid_black"
            android:textAlignment="center" />

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPanel"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quit"
            android:id="@+id/btnCancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:id="@+id/btnRegister" />
    </LinearLayout>
</LinearLayout>

</RelativeLayout>