<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="icarte.armedialab.com.icarte.ui.OrderReceiptActivity"
        android:background="@color/order_receipt_background">

        <com.ctrlplusz.anytextview.AnyTextView
            android:id="@+id/txtOrderResponseTitle"
            app:typeface="NoticiaText-BoldItalic.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="@color/accent"
            android:text="@string/order_response_title"
            android:layout_above="@+id/txtOrderPreparationTimeTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half"
            />
        <com.ctrlplusz.anytextview.AnyTextView
            app:typeface="NoticiaText-BoldItalic.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_order_preparation_time"
            android:id="@+id/txtOrderPreparationTimeTitle"
            android:textSize="18sp"
            android:textColor="@color/green"
            android:layout_above="@+id/txtOrderPreparationTime"
            android:layout_centerHorizontal="true" />

        <com.ctrlplusz.anytextview.AnyTextView
            app:typeface="NoticiaText-BoldItalic.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtOrderPreparationTime"
            android:textSize="32sp"
            android:textColor="@color/green"
            android:layout_above="@+id/txtOrderRefNum"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/qrcodeOrderResponse"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/response_qr_code_descr"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/activity_vertical_margin_half" />

        <com.ctrlplusz.anytextview.AnyTextView
            android:id="@+id/txtQrCodeDescription"
            app:typeface="NoticiaText-BoldItalic.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:layout_below="@+id/qrcodeOrderResponse"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:text="@string/response_qr_code_descr"/>

        <com.ctrlplusz.anytextview.AnyTextView
            app:typeface="NoticiaText-BoldItalic.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_order_ref_number_title"
            android:id="@+id/txtOrderRefNumTitle"
            android:textSize="18sp"
            android:textColor="@color/accent"
            android:layout_above="@+id/qrcodeOrderResponse"
            android:layout_alignStart="@id/qrcodeOrderResponse" />

        <com.ctrlplusz.anytextview.AnyTextView
            app:typeface="NoticiaText-BoldItalic.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtOrderRefNum"
            android:textSize="22sp"
            android:textColor="@color/accent"
            android:layout_marginStart="@dimen/activity_horizontal_margin_half"
            android:layout_alignBottom="@+id/txtOrderRefNumTitle"
            android:layout_toEndOf="@+id/txtOrderRefNumTitle" />

        <com.andexert.library.RippleView
            android:id="@+id/rippleBtnSaveOrderItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:layout_margin="@dimen/nopadding"
            android:elevation="10dp"
            android:background="@drawable/button_selector"
            android:focusable="true"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            app:rv_color="@color/white"
            app:rv_type="simpleRipple"
            app:rv_alpha="150"
            android:padding="@dimen/nopadding"
            android:layout_marginBottom="@dimen/activity_vertical_margin_double"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnFinishMe"
                android:text="@string/label_btn_got_it"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:background="@color/no_color"
                />
        </com.andexert.library.RippleView>
    </RelativeLayout>
</ScrollView>