<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/activity_horizontal_margin_half"
    android:layout_marginEnd="@dimen/activity_horizontal_margin_half"
    tools:context="icarte.armedialab.com.icarte.ui.ContactusActivity"
    android:background="@color/no_color"
    android:paddingEnd="@dimen/activity_vertical_margin_double_double"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:id="@+id/scrollViewContactForm">

        <LinearLayout
            android:id="@+id/containerConfirmationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:paddingBottom="@dimen/activity_vertical_margin">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutEditCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_half"
                android:gravity="start"
                app:hintTextAppearance="@style/ContactUsInputLayoutTheme"
                
                app:errorEnabled="true"
                >
                <EditText
                    android:id="@+id/editCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:inputType="text"
                    android:hint="@string/title_customer_name"
                    style="@style/ContactUsInputLayoutTheme"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutEditContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_half"
                android:gravity="start"
                android:background="@drawable/comment_field_background"
                app:hintTextAppearance="@style/ContactUsInputLayoutTheme"
                app:errorEnabled="true"
                >
                <EditText
                    android:id="@+id/editContactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/title_contact_number"
                    style="@style/ContactUsInputLayoutTheme"
                    />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/commentType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:layout_marginTop="@dimen/activity_vertical_margin_half"
                android:gravity="start"
                android:spinnerMode="dropdown"
                android:popupBackground="@color/bluegreen"
                android:prompt="@string/label_comment_type"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutEditComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="start|top"
                app:hintTextAppearance="@style/ContactUsInputLayoutTheme"
                android:background="@drawable/comment_field_background"
                app:errorEnabled="true"
                >
                <EditText
                    android:id="@+id/editComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:hint="@string/title_edit_comments"
                    style="@style/ContactUsInputLayoutTheme"
                    android:ems="10"
                    android:gravity="start|top"
                    android:singleLine="false"
                    android:lines="4"
                    android:scrollHorizontally="false"
                    android:inputType="textMultiLine"
                />
            </android.support.design.widget.TextInputLayout>
            <com.andexert.library.RippleView
                android:id="@+id/rippleContainerForSubnmitCommentsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="true"
                android:focusable="true"
                android:clickable="true"
                app:rv_color="@color/white"
                rv_centered="true"
                app:rv_type="simpleRipple"
                app:rv_alpha="150"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_horizontal_margin_half"
                android:background="@drawable/button_selector"
                android:paddingStart="@dimen/activity_horizontal_margin_half"
                android:paddingEnd="@dimen/activity_horizontal_margin_half"
                android:elevation="8dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSubmitComments"
                    android:text="@string/title_submit_comments"
                    android:contentDescription="@string/title_submit_comments"
                    android:background="@color/no_color"
                    />
            </com.andexert.library.RippleView>
        </LinearLayout>
    </ScrollView>
    <me.fichardu.circleprogress.CircleProgress
        android:id="@+id/progressBarContactForm"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:color1="@android:color/holo_red_light"
        app:color2="@android:color/holo_green_light"
        app:color3="@android:color/holo_blue_light"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true" />
</RelativeLayout>